feat: API update for modificationCount
